--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -45,12 +45,13 @@
   "files": [
     "dist",
     "src",
-    "!stories/**/*"
+    "LICENSE-Adobe"
   ],
   "scripts": {
     "build": "vite build --config ../../vite.config.js",
     "build:watch": "chokidar \"src/**/*.(js|jsx|ts|tsx)\" -c \"npm run build\"",
-    "test": "vitest --config ../../vite.config.js"
+    "test": "vitest --config ../../vite.config.js",
+    "prepublish": "cp ../../LICENSE dist/"
   },
   "dependencies": {
     "@ugrc/utilities": "2.2.5",
