--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -49,9 +49,9 @@
   ],
   "scripts": {
     "build": "vite build --config ../../vite.config.js",
-    "build:watch": "chokidar \"src/**/*.(js|jsx|ts|tsx)\" -c \"npm run build\"",
-    "test": "vitest --config ../../vite.config.js",
-    "prepublish": "cp ../../LICENSE dist/"
+    "build:watch": "chokidar \"src/**/*.(js|jsx|tsx)\" -c \"npm run build\"",
+    "prepublish": "cp ../../LICENSE dist/",
+    "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
     "@ugrc/utilities": "2.2.5",
