--- a/package.json
+++ b/package.json
@@ -74,16 +74,16 @@
     "react-lorem-ipsum": "^1.4.10"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.6.1",
+    "@chromatic-com/storybook": "^1.8.0",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^8.2.6",
-    "@storybook/addon-essentials": "^8.2.6",
-    "@storybook/addon-interactions": "^8.2.6",
-    "@storybook/addon-links": "^8.2.6",
-    "@storybook/addon-themes": "^8.2.6",
-    "@storybook/react": "^8.2.6",
-    "@storybook/react-vite": "^8.2.6",
-    "@storybook/test": "^8.2.6",
+    "@storybook/addon-actions": "^8.2.9",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-themes": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-vite": "^8.2.9",
+    "@storybook/test": "^8.2.9",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^22.5.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -97,17 +97,24 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "jsdom": "^24.1.1",
+    "msw": "^2.4.1",
+    "msw-storybook-addon": "^2.0.3",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "prettier-plugin-packagejson": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "read-pkg": "^9.0.1",
     "release-please": "^16.12.0",
-    "storybook": "^8.2.6",
+    "storybook": "^8.2.9",
     "tailwindcss": "^3.4.7",
     "tailwindcss-react-aria-components": "^1.1.4",
     "vite": "^5.3.5",
     "vite-plugin-dts": "^4.0.3",
     "vitest": "^2.0.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
