--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -34,6 +34,9 @@ jobs:
       - name: 🧼 Lint files
         run: npm run lint
 
+      - name: 🏗️ Build
+        run: npm run build
+
       - name: ✔ Check Typescript
         run: npx tsc
 
