--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -49,13 +49,14 @@
   ],
   "scripts": {
     "build": "vite build --config ../../vite.config.js",
-    "build:watch": "chokidar \"src/**/*.(js|jsx|tsx)\" -c \"npm run build\"",
+    "build:watch": "chokidar \"src/**/*.(js|jsx|ts|tsx)\" -c \"npm run build\"",
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@ugrc/utilities": "2.2.5",
     "lodash-es": "^4.17.21",
+    "md5": "^2.3.0",
     "react-aria": "^3.34.1",
     "react-aria-components": "^1.3.1",
     "react-stately": "3.32.1",
