--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -57,12 +57,12 @@
     "@ugrc/utilities": "2.2.5",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.436.0",
-    "md5": "^2.3.0",
     "react-aria": "^3.34.1",
     "react-aria-components": "^1.3.1",
     "react-stately": "3.32.1",
     "tailwind-merge": "^2.4.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "ts-md5": "^1.3.1"
   },
   "peerDependencies": {
     "@arcgis/core": "4.x",
