--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -36,7 +36,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.esm.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/src/index.d.ts"
     },
     "./src": {
       "import": "./src/index.js"
