--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,6 +22,9 @@ jobs:
   deploy:
     name: Create and publish packages
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     needs: release
     if: needs.release.outputs.releases_created
     steps:
