--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,8 +14,7 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    environment:
-      name: dev
+
     steps:
       - name: ⬇️ Set up code
         uses: actions/checkout@v4
@@ -64,3 +63,38 @@ jobs:
 
       - name: 🧪 Run tests
         run: npm test
+
+  deploy-storybook:
+    name: 📚 Deploy documentation
+    runs-on: ubuntu-latest
+    needs: [lint, test-unit]
+    environment:
+      name: dev
+
+    steps:
+      - name: ⬇️ Set up code
+        uses: actions/checkout@v4
+        with:
+          show-progress: false
+
+      - name: ⎔ Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: npm
+
+      - name: 📥 Download dependencies
+        run: npm ci
+
+      - name: 🏗️ Build
+        run: npm run build-storybook
+
+      - name: 🚀 Deploy
+        uses: agrc/firebase-website-deploy-composite-action@v1
+        with:
+          identity-provider: ${{ secrets.IDENTITY_PROVIDER }}
+          service-account-email: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
+          project-id: ${{ secrets.PROJECT_ID }}
+          build-command: npm run build:storybook
+        env:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
