--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "npm run build --workspaces",
-    "build-storybook": "storybook build",
+    "build:storybook": "storybook build --docs --output-dir ./dist",
     "format": "prettier . --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --quiet --fix",
