ci: run build first

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -72,8 +72,11 @@ jobs:
           node-version: lts/*
           cache: npm
 
-      - name: 📥 Download dependencies
-        run: npm ci
+      - name: 🏗️ Build
+        run: npm run build --workspace @ugrc/utilities
+
+      - name: 🏗️ Build
+        run: npm run build
 
       - name: 🚀 Deploy
         uses: agrc/firebase-website-deploy-composite-action@v1
