ci: add packages for build

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -85,6 +85,9 @@ jobs:
           node-version: lts/*
           cache: npm
 
+      - name: 📥 Download dependencies
+        run: npm ci
+
       - name: 🏗️ Build
         run: npm run build --workspace @ugrc/utilities
 
