--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -72,6 +72,9 @@ jobs:
           node-version: lts/*
           cache: npm
 
+      - name: 📥 Download dependencies
+        run: npm ci
+
       - name: 🏗️ Build
         run: npm run build --workspace @ugrc/utilities
 
