ci: simplify steps

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -72,21 +72,13 @@ jobs:
           node-version: lts/*
           cache: npm
 
-      - name: 📥 Download dependencies
-        run: npm ci
-
-      - name: 🏗️ Build
-        run: npm run build --workspace @ugrc/utilities
-
-      - name: 🏗️ Build
-        run: npm run build
-
       - name: 🚀 Deploy
         uses: agrc/firebase-website-deploy-composite-action@v1
         with:
           identity-provider: ${{ secrets.IDENTITY_PROVIDER }}
           service-account-email: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
           project-id: ${{ secrets.PROJECT_ID }}
+          prebuild-command: npm run build --workspace @ugrc/utilities && npm run build
           build-command: npm run build:storybook
         env:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
