--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -82,3 +82,4 @@ jobs:
           build-command: npm run build:storybook
         env:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          VITE_QUAD_WORD: ${{ secrets.DISCOVER_QUAD_WORD }}
