--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,10 +2,6 @@ name: Pull Request Events
 
 on: pull_request
 
-permissions:
-  contents: write
-  pull-requests: write
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
@@ -68,8 +64,10 @@ jobs:
     name: 📚 Deploy documentation
     runs-on: ubuntu-latest
     needs: [lint, test-unit]
+    if: ${{ github.event.sender.type == 'User' }}
     permissions:
       id-token: write
+      pull-requests: write
     environment:
       name: dev
 
@@ -91,8 +89,9 @@ jobs:
           identity-provider: ${{ secrets.IDENTITY_PROVIDER }}
           service-account-email: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
           project-id: ${{ secrets.PROJECT_ID }}
+          prerelease: 'yes'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           prebuild-command: npm run build --workspace @ugrc/utilities && npm run build
           build-command: npm run build:storybook
         env:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
           VITE_QUAD_WORD: ${{ secrets.DISCOVER_QUAD_WORD }}
