--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -48,7 +48,7 @@
     "LICENSE-Adobe"
   ],
   "scripts": {
-    "build": "vite build --config ../../vite.config.js",
+    "build": "tsc --project ../../tsconfig.json && vite build --config ../../vite.config.js",
     "build:watch": "chokidar \"src/**/*.(js|jsx|tsx)\" -c \"npm run build\"",
     "prepublish": "cp ../../LICENSE dist/",
     "test": "vitest --config ../../vite.config.js"
