--- a/packages/tailwind-preset/package.json
+++ b/packages/tailwind-preset/package.json
@@ -33,10 +33,7 @@
   "files": [
     "src"
   ],
-  "scripts": {
-    "build": "echo skipping",
-    "test": "echo skipping"
-  },
+  "scripts": {},
   "dependencies": {
     "tailwindcss-react-aria-components": "^1.1.4"
   }
