--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -49,21 +49,20 @@
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
+    "@arcgis/core": "4.x",
     "@ugrc/utilities": "2.2.6",
+    "firebase": ">=10.x",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.436.0",
-    "react-aria": "^3.34.1",
+    "prop-types": "^15.8.1",
     "react-aria-components": "^1.3.1",
+    "react-aria": "^3.34.1",
     "react-stately": "3.32.1",
     "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1",
     "ts-md5": "^1.3.1"
   },
   "peerDependencies": {
-    "@arcgis/core": "4.x",
-    "firebase": ">=10.x",
-    "prop-types": "^15.8.1",
-    "react": ">=16.8",
-    "react-dom": ">=16.8"
+    "react": ">=16.8"
   }
 }
