fix: point to the built package
This reverts commit 4562da0dac36154726595aee14699d0027b163dc.

--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -35,10 +35,15 @@
   "type": "module",
   "exports": {
     ".": {
+      "import": "./dist/index.esm.js",
+      "types": "./dist/src/index.d.ts"
+    },
+    "./src": {
       "import": "./src/index.js"
     }
   },
   "files": [
+    "dist",
     "src",
     "LICENSE-Adobe"
   ],
