--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES2020"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ES2020"],
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -16,9 +12,7 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "typeRoots": [
-      "./dist/index.d.ts"
-    ],
+    "typeRoots": ["./dist/index.d.ts"],
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "isolatedModules": true,
@@ -26,10 +20,7 @@
     "jsx": "react-jsx",
     "skipLibCheck": true
   },
-  "include": [
-    "packages",
-    "src"
-  ],
+  "include": ["packages", "src"],
   "references": [
     {
       "path": "./tsconfig.node.json"
