--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,5 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "vite.config.js"
-  ]
+  "include": ["vite.config.js"]
 }
