--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "fortawesome",
     "FULLNAME",
     "Geocode",
+    "Geospatial",
     "googleapis",
     "Gourley",
     "hasmore",
@@ -30,6 +31,7 @@
     "SRID",
     "storyshots",
     "tailwindcss",
+    "Taylorsville",
     "toomany",
     "Topo",
     "TSQL",
