chore(package): correct some package resolution issues

--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -33,6 +33,8 @@
     }
   ],
   "type": "module",
+  "main": "./dist/index.esm.js",
+  "types": "./dist/src/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.esm.js",
