chore: downgrade to stable version of storybook
Ref: https://github.com/storybookjs/storybook/issues/29189

--- a/package.json
+++ b/package.json
@@ -86,14 +86,14 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.8.0",
     "@mdx-js/react": "^3.1.0",
-    "@storybook/addon-actions": "^8.4.0",
-    "@storybook/addon-essentials": "^8.4.0",
-    "@storybook/addon-interactions": "^8.4.0",
-    "@storybook/addon-links": "^8.4.0",
-    "@storybook/addon-themes": "^8.4.0",
-    "@storybook/react": "^8.4.0",
-    "@storybook/react-vite": "^8.4.0",
-    "@storybook/test": "^8.2.9",
+    "@storybook/addon-actions": "8.2.9",
+    "@storybook/addon-essentials": "8.2.9",
+    "@storybook/addon-interactions": "8.2.9",
+    "@storybook/addon-links": "8.2.9",
+    "@storybook/addon-themes": "8.2.9",
+    "@storybook/react": "8.2.9",
+    "@storybook/react-vite": "8.2.9",
+    "@storybook/test": "8.2.9",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^22.8.7",
     "@vitejs/plugin-react": "^4.3.3",
@@ -116,7 +116,7 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "read-pkg": "^9.0.1",
     "release-please": "^16.14.3",
-    "storybook": "^8.2.9",
+    "storybook": "8.2.9",
     "tailwindcss": "^3.4.14",
     "tailwindcss-react-aria-components": "^1.1.6",
     "vite": "^5.4.10",
