--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -33,26 +33,16 @@
     }
   ],
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.esm.js",
-      "types": "./dist/src/index.d.ts"
-    },
-    "./src": {
-      "import": "./src/index.js"
-    }
-  },
-  "main": "./dist/index.esm.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "./src/index.ts",
   "files": [
-    "dist",
     "src",
     "LICENSE-Adobe"
   ],
   "scripts": {
-    "build": "tsc --project ../../tsconfig.json && vite build --config ../../vite.config.js",
-    "build:watch": "chokidar \"src/**/*.(js|jsx|tsx)\" -c \"npm run build\"",
-    "prepublish": "cp ../../LICENSE dist/",
+    "build": "echo 'This package does not have a build process.'",
+    "check-types": "tsc",
+    "check-types-watch": "tsc --watch",
+    "prepublish": "cp ../../LICENSE /",
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
@@ -70,6 +60,7 @@
     "ts-md5": "^1.3.1"
   },
   "peerDependencies": {
-    "react": ">=16.8"
+    "react": ">=16.8",
+    "react-dom": ">=16.8"
   }
 }
