--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -33,25 +33,20 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.esm.js"
-    },
-    "./hooks": {
-      "import": "./dist/index.esm2.js"
-    },
-    "./src": {
       "import": "./src/index.js"
     },
-    "./src/hooks": {
+    "./hooks": {
       "import": "./src/hooks/index.js"
     }
   },
+  "main": "./src/index.js",
   "files": [
-    "dist",
     "src"
   ],
   "scripts": {
-    "build": "vite build --config ../../vite.config.js",
-    "build:watch": "chokidar \"src/**/*.(js|jsx|css)\" -c \"npm run build\"",
+    "build": "echo 'This package does not have a build process.'",
+    "check-types": "tsc",
+    "check-types-watch": "tsc --watch",
     "test": "vitest --config ../../vite.config.js"
   },
   "peerDependencies": {
