chore(monorepo): align check with atlas convention
watch is unnecessary as it's fairly simple to add -- --watch to the end. it's almost the same amount of typing

--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -40,8 +40,7 @@
   ],
   "scripts": {
     "build": "echo 'This package does not have a build process.'",
-    "check-types": "tsc",
-    "check-types-watch": "tsc --watch",
+    "check": "tsc",
     "prepublish": "cp ../../LICENSE /",
     "test": "vitest --config ../../vite.config.js"
   },
