--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "npm run build --workspace @ugrc/dart-board --workspace @ugrc/layer-selector --workspace @ugrc/mousetrap --workspace @ugrc/sherlock --workspace @ugrc/popover --workspace @ugrc/header",
     "build:storybook": "storybook build --docs --output-dir ./dist --disable-telemetry",
+    "check": "tsc",
     "format": "prettier . --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --quiet --fix",
