--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -61,5 +61,8 @@
   "peerDependencies": {
     "react": ">=16.8",
     "react-dom": ">=16.8"
+  },
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.12"
   }
 }
