--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -33,20 +33,19 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./src/index.js"
+      "import": "./src/index.ts"
     },
     "./hooks": {
-      "import": "./src/hooks/index.js"
+      "import": "./src/hooks/index.ts"
     }
   },
-  "main": "./src/index.js",
+  "main": "./src/index.ts",
   "files": [
     "src"
   ],
   "scripts": {
     "build": "echo 'This package does not have a build process.'",
-    "check-types": "tsc",
-    "check-types-watch": "tsc --watch",
+    "check": "tsc",
     "test": "vitest --config ../../vite.config.js"
   },
   "peerDependencies": {
