--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -44,7 +44,7 @@
     "src"
   ],
   "scripts": {
-    "build": "echo 'This package does not have a build process.'",
+    "build": "npm run check",
     "check": "tsc",
     "test": "vitest --config ../../vite.config.js"
   },
