--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -46,6 +46,8 @@
   },
   "dependencies": {
     "@arcgis/core": "4.x",
+    "@esri/arcgis-rest-geocoding": "^4.0.3",
+    "@esri/arcgis-rest-request": "^4.2.3",
     "@ugrc/utilities": "2.2.7",
     "firebase": ">=10.x",
     "ky": "^1.7.2",
