chore(monorepo): update dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,8 @@
     "lods",
     "lucide",
     "maxresults",
+    "multipatch",
+    "multipoint",
     "oidc",
     "packagejson",
     "prebuild",
