--- a/packages/tailwind-preset/package.json
+++ b/packages/tailwind-preset/package.json
@@ -33,7 +33,9 @@
   "files": [
     "src"
   ],
-  "scripts": {},
+  "scripts": {
+    "build": "echo 'No build necessary'"
+  },
   "dependencies": {
     "tailwindcss-react-aria-components": "^1.1.6"
   }
