--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -48,6 +48,7 @@
     "@arcgis/core": "4.x",
     "@esri/arcgis-rest-geocoding": "^4.0.3",
     "@esri/arcgis-rest-request": "^4.2.3",
+    "@types/lodash-es": "^4.17.12",
     "@ugrc/utilities": "2.2.7",
     "firebase": ">=10.x",
     "ky": "^1.7.2",
@@ -61,10 +62,6 @@
     "ts-md5": "^1.3.1"
   },
   "peerDependencies": {
-    "react": ">=16.8",
-    "react-dom": ">=16.8"
-  },
-  "devDependencies": {
-    "@types/lodash-es": "^4.17.12"
+    "react": ">=16.8"
   }
 }
