--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -48,10 +48,11 @@
     "check": "tsc",
     "test": "vitest --config ../../vite.config.js"
   },
+  "dependencies": {
+    "@arcgis/core": "4.x",
+    "ky": "^1.7.2"
+  },
   "peerDependencies": {
-    "@arcgis/core": "^4.20.0",
-    "ky": ">=1.3.0",
-    "prop-types": "^15.8.1",
     "react": ">=16.8.0"
   }
 }
