--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "prettier": {
     "plugins": [
       "prettier-plugin-packagejson",
-      "prettier-plugin-tailwindcss"
+      "prettier-plugin-tailwindcss",
+      "prettier-plugin-organize-imports"
     ],
     "semi": true,
     "singleQuote": true,
@@ -113,6 +114,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-packagejson": "^2.5.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "read-pkg": "^9.0.1",
