--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,11 @@
     "VITE",
     "webm",
     "webp",
-    "wkid"
+    "wkid",
+    "xmax",
+    "xmin",
+    "ymax",
+    "ymin"
   ],
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode"
