--- a/packages/utah-design-system/tsconfig.json
+++ b/packages/utah-design-system/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "./../../tsconfig.json",
-  "include": ["src"]
+  "extends": "./../../tsconfig.browser.json",
+  "include": ["src", "firebase.ts"]
 }
