--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -36,7 +36,7 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.esm.js"
+      "import": "./dist/index.es.js"
     },
     "./src/": {
       "import": "./src/"
