--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -51,14 +51,14 @@
     "@types/lodash-es": "^4.17.12",
     "@ugrc/utilities": "2.4.3",
     "firebase": ">=10.x",
-    "ky": "^1.7.2",
+    "ky": "^1.7.4",
     "lodash-es": "^4.17.21",
-    "lucide-react": "^0.454.0",
-    "react-aria": "^3.35.1",
-    "react-aria-components": "^1.4.1",
-    "react-stately": "3.33.0",
-    "tailwind-merge": "^2.5.4",
-    "tailwind-variants": "^0.2.1",
+    "lucide-react": ">=0.454.0",
+    "react-aria": "^3.36.0",
+    "react-aria-components": "^1.5.0",
+    "react-stately": "3.34.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-variants": "^0.3.0",
     "ts-md5": "^1.3.1"
   },
   "peerDependencies": {
