--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,12 +1,15 @@
 {
   "bootstrap-sha": "2919caa28eb25ef926ca9db1276d22e8f5170f10",
-  "plugins": ["node-workspace"],
+  "plugins": [
+    "node-workspace"
+  ],
   "packages": {
     "packages/dart-board": {},
     "packages/header": {},
     "packages/layer-selector": {},
     "packages/mouse-trap": {},
     "packages/sherlock": {},
+    "packages/tailwind-preset": {},
     "packages/utilities": {},
     "packages/popover": {},
     "packages/utah-design-system": {}
