ci(monorepo): fix storybook build and typescript issues

--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -1,4 +1,7 @@
 {
   "extends": "@ugrc/tsconfigs/browser",
-  "include": ["packages", "src"]
+  "include": ["packages/**/src/"],
+  "compilerOptions": {
+    "jsxImportSource": "react"
+  }
 }
