--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
   "dependencies": {
     "@arcgis/core": "^4.31.6",
     "lucide-react": "^0.469.0",
-    "react": ">=16.8.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-lorem-ipsum": "^1.4.10"
   },
@@ -97,7 +98,7 @@
     "@storybook/test": "^8.4.7",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^22.10.5",
-    "@ugrc/tsconfigs": "^1.0.2",
+    "@ugrc/tsconfigs": "^1.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "chokidar-cli": "^3.0.0",
@@ -122,9 +123,9 @@
     "storybook": "^8.4.7",
     "tailwindcss": "^3.4.17",
     "tailwindcss-react-aria-components": "^1.2.0",
-    "vite": "^6.0.11",
-    "vite-plugin-dts": "^4.4.0",
-    "vitest": "^2.1.9"
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0",
+    "vitest": "^3.0.5"
   },
   "msw": {
     "workerDirectory": [
