--- a/packages/popover/package.json
+++ b/packages/popover/package.json
@@ -49,9 +49,10 @@
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
-    "@radix-ui/react-popover": "^1.1.4"
+    "@radix-ui/react-popover": "^1.1.6"
   },
   "peerDependencies": {
-    "react": ">=16.8.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   }
 }
