--- a/package.json
+++ b/package.json
@@ -41,42 +41,6 @@
       "twMerge"
     ]
   },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "es2022": true,
-      "jest": true,
-      "node": true
-    },
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    },
-    "plugins": [
-      "react",
-      "prettier",
-      "import",
-      "jsx-a11y",
-      "react-hooks"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:react/jsx-runtime",
-      "plugin:react-hooks/recommended",
-      "plugin:import/recommended",
-      "plugin:jsx-a11y/recommended",
-      "prettier"
-    ]
-  },
   "dependencies": {
     "@arcgis/core": "^4.31.6",
     "lucide-react": "^0.469.0",
@@ -87,6 +51,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
+    "@eslint/js": "^9.20.0",
     "@mdx-js/react": "^3.1.0",
     "@storybook/addon-actions": "^8.4.7",
     "@storybook/addon-essentials": "^8.4.7",
@@ -102,13 +67,14 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "chokidar-cli": "^3.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.20.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.15.0",
     "jsdom": "^25.0.1",
     "msw": "^2.7.0",
     "msw-storybook-addon": "^2.0.4",
@@ -124,6 +90,7 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-react-aria-components": "^1.2.0",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.0",
     "vite": "^6.1.0",
     "vitest": "^3.0.5"
   },
