chore: cleanup TS and linting errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "docgen",
     "escaperegexp",
     "esrijson",
+    "extralight",
     "Firestore",
     "fontawesome",
     "fortawesome",
@@ -44,6 +45,7 @@
     "ugrc",
     "uniqwith",
     "Utahid",
+    "utds",
     "VITE",
     "webm",
     "webp",
