--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -52,14 +52,11 @@
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "react-aria-components": "^1.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "clsx": "^2.1.1"
   },
   "peerDependencies": {
     "@arcgis/core": "^4.20.0",
     "prop-types": "^15.8.1",
-    "react": ">=18.3.1",
-    "react-dom": ">=18.3.1"
+    "react": ">=16.8.0"
   }
 }
