--- a/packages/popover/package.json
+++ b/packages/popover/package.json
@@ -52,7 +52,6 @@
     "@radix-ui/react-popover": "^1.1.6"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   }
 }
