--- a/package.json
+++ b/package.json
@@ -53,14 +53,14 @@
     "@chromatic-com/storybook": "^3.2.3",
     "@eslint/js": "^9.20.0",
     "@mdx-js/react": "^3.1.0",
-    "@storybook/addon-actions": "^8.4.7",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/addon-themes": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/react-vite": "^8.4.7",
-    "@storybook/test": "^8.4.7",
+    "@storybook/addon-actions": "^8.6.0",
+    "@storybook/addon-essentials": "^8.6.0",
+    "@storybook/addon-interactions": "^8.6.0",
+    "@storybook/addon-links": "^8.6.0",
+    "@storybook/addon-themes": "^8.6.0",
+    "@storybook/react": "^8.6.0",
+    "@storybook/react-vite": "^8.6.0",
+    "@storybook/test": "^8.6.0",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^22.10.5",
     "@ugrc/tsconfigs": "^1.0.3",
@@ -85,8 +85,9 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "read-pkg": "^9.0.1",
     "release-please": "^16.15.0",
-    "storybook": "^8.4.7",
+    "storybook": "^8.6.0",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "^1.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
