ci(design-system): no need to run check during build
It's already run in lint job

--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -39,7 +39,7 @@
     "LICENSE-Adobe"
   ],
   "scripts": {
-    "build": "npm run check",
+    "build": "echo 'No build necessary'",
     "check": "tsc",
     "prepublish": "cp ../../LICENSE /",
     "test": "vitest --config ../../vite.config.js"
