--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,4 +1,5 @@
 {
+  "packages/eslint-config": "1.0.0",
   "packages/dart-board": "5.0.23",
   "packages/header": "1.1.3",
   "packages/layer-selector": "6.3.0",
