--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,6 +2,7 @@
   "bootstrap-sha": "2919caa28eb25ef926ca9db1276d22e8f5170f10",
   "plugins": ["node-workspace"],
   "packages": {
+    "packages/eslint-config": {},
     "packages/dart-board": {},
     "packages/header": {},
     "packages/layer-selector": {},
