fix(mono): add release configs for esri-theme-toggle package

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,7 @@
   "packages": {
     "packages/dart-board": {},
     "packages/eslint-config": {},
+    "packages/esri-theme-toggle": {},
     "packages/header": {},
     "packages/layer-selector": {},
     "packages/mouse-trap": {},
