--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,6 +1,7 @@
 {
   "packages/dart-board": "5.0.23",
   "packages/eslint-config": "1.1.0",
+  "packages/esri-theme-toggle": "0.0.0",
   "packages/header": "1.1.3",
   "packages/layer-selector": "6.3.0",
   "packages/mouse-trap": "2.0.21",
