--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.0.0",
     "typescript-eslint": "^8.26.0"
   },
