--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@eslint/js": "^9.21.0",
+    "@tanstack/eslint-plugin-query": "^5.73.3",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
