chore(esri-theme-toggle): add test page

--- a/packages/esri-theme-toggle/package.json
+++ b/packages/esri-theme-toggle/package.json
@@ -38,6 +38,7 @@
     "build": "echo 'No build necessary'",
     "check": "echo 'No check necessary'",
     "prepublish": "cp ../../LICENSE /",
+    "start": "npx serve",
     "test": "echo 'No test necessary'"
   },
   "dependencies": {
