--- a/package.json
+++ b/package.json
@@ -50,16 +50,11 @@
     "react-lorem-ipsum": "^1.4.10"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "^4.0.1",
     "@mdx-js/react": "^3.1.0",
-    "@storybook/addon-actions": "^8.6.12",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/addon-links": "^8.6.12",
-    "@storybook/addon-themes": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
-    "@storybook/test": "^8.6.0",
+    "@storybook/addon-links": "^9.0.15",
+    "@storybook/addon-themes": "^9.0.15",
+    "@storybook/react-vite": "^9.0.15",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.3",
     "@vitejs/plugin-react": "^4.4.1",
@@ -77,13 +72,14 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "read-pkg": "^9.0.1",
     "release-please": "^16.15.0",
-    "storybook": "^8.6.0",
+    "storybook": "^9.0.15",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "^1.2.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.2",
+    "@storybook/addon-docs": "^9.0.15"
   },
   "msw": {
     "workerDirectory": [
