--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "npm run build --workspaces",
     "build:storybook": "storybook build --docs --output-dir ./dist --disable-telemetry",
     "check": "tsc -b && prettier . --check",
+    "firebase:save-state": "firebase emulators:start --import ./data/firebase --export-on-exit --only auth",
     "format": "prettier . --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --quiet --fix",
@@ -23,7 +24,6 @@
     "storybook": "run-p storybook:*",
     "storybook:dev": "storybook dev --port 6006",
     "storybook:firebase": "firebase emulators:start --import ./data/firebase --only auth",
-    "firebase:save-state": "firebase emulators:start --import ./data/firebase --export-on-exit --only auth",
     "test": "vitest"
   },
   "prettier": {
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
     "@mdx-js/react": "^3.1.0",
+    "@storybook/addon-docs": "^9.0.15",
     "@storybook/addon-links": "^9.0.15",
     "@storybook/addon-themes": "^9.0.15",
     "@storybook/react-vite": "^9.0.15",
@@ -78,8 +79,7 @@
     "tailwindcss-react-aria-components": "^1.2.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
-    "vitest": "^3.1.2",
-    "@storybook/addon-docs": "^9.0.15"
+    "vitest": "^3.1.2"
   },
   "msw": {
     "workerDirectory": [
