--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "autoprefixer": "^10.4.21",
     "chokidar-cli": "^3.0.0",
     "eslint": "^9.30.1",
-    "jsdom": "^26.1.0",
+    "happy-dom": "^18.0.1",
     "msw": "^2.10.4",
     "msw-storybook-addon": "^2.0.5",
     "npm-run-all": "^4.1.5",
