--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,9 @@ jobs:
           cache: npm
           registry-url: 'https://registry.npmjs.org'
 
+      - name: 🔧 Update npm
+        run: npm install -g npm@latest
+
       - name: 📥 Download dependencies
         run: npm ci
 
