--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     ]
   },
   "dependencies": {
-    "@arcgis/core": "^4.33.12",
+    "@arcgis/core": "^4.34.7",
+    "@arcgis/map-components": "^4.34.9",
     "lucide-react": "^0.546.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
