--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -57,8 +57,8 @@
     "react-aria": "^3.44.0",
     "react-aria-components": "^1.13.0",
     "react-stately": "3.42.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwind-variants": "^3.1.0",
+    "tailwind-merge": "2.6.0",
+    "tailwind-variants": "0.3.0",
     "ts-md5": "^2.0.1"
   },
   "peerDependencies": {
