--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "read-pkg": "^9.0.1",
     "release-please": "^17.1.3",
     "storybook": "^9.0.15",
-    "tailwind-merge": "^3.4.0",
-    "tailwind-variants": "^3.1.1",
+    "tailwind-merge": "2.6.0",
+    "tailwind-variants": "0.3.0",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "^1.2.0",
