--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -62,6 +62,8 @@
     "ts-md5": "^2.0.1"
   },
   "peerDependencies": {
-    "react": ">=16.8"
+    "@arcgis/map-components": ">=4.28.0",
+    "@esri/calcite-components": ">=2.0.0",
+    "react": ">=19.0.0"
   }
 }
